services/whoami/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
    - host: whoami.d-talks.org
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami
              servicePort: 80
